Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-31499

Assertion `(0)' failed in Gis_geometry_collection::init_from_opresult

    XMLWordPrintable

Details

    • Not for ES Release Notes
    • Wrong results for self-touching shapes.
    • Q4/2025 Server Maintenance

    Description

      SELECT ST_INTERSECTION(
        ST_MULTIPOLYGONFROMTEXT(' MULTIPOLYGON(((3.8571428571428568 2.857142857142857,5.571428571428571 4.571428571428571,9 4,3.8571428571428568 2.857142857142857)),((4.5 4.75,3 5,4.6 7.4,6 6,4.5 4.75))) '),
        ST_MULTIPOLYGONFROMTEXT(' MULTIPOLYGON(((3 4,3 5,2 5,2 7,5 4,3 4),(5 4,7.4 7,8 7,8 4,5 4))) ')
      );
      

      10.4 f5dceafd

      mysqld: /data/src/10.4/sql/spatial.cc:3330: virtual uint Gis_geometry_collection::init_from_opresult(String*, const char*, uint): Assertion `(0)' failed.
      230619 18:53:26 [ERROR] mysqld got signal 6 ;
       
      #3  <signal handler called>
      #4  __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=6, no_tid=no_tid@entry=0) at ./nptl/pthread_kill.c:44
      #5  0x00007f1ce0aa9d2f in __pthread_kill_internal (signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:78
      #6  0x00007f1ce0a5aef2 in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
      #7  0x00007f1ce0a45472 in __GI_abort () at ./stdlib/abort.c:79
      #8  0x00007f1ce0a45395 in __assert_fail_base (fmt=0x7f1ce0bb9a70 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x5588ca73da80 "(0)", file=file@entry=0x5588ca73bfa0 "/data/src/10.4/sql/spatial.cc", line=line@entry=3330, function=function@entry=0x5588ca73da00 "virtual uint Gis_geometry_collection::init_from_opresult(String*, const char*, uint)") at ./assert/assert.c:92
      #9  0x00007f1ce0a53df2 in __GI___assert_fail (assertion=0x5588ca73da80 "(0)", file=0x5588ca73bfa0 "/data/src/10.4/sql/spatial.cc", line=3330, function=0x5588ca73da00 "virtual uint Gis_geometry_collection::init_from_opresult(String*, const char*, uint)") at ./assert/assert.c:101
      #10 0x00005588c8e8f1fd in Gis_geometry_collection::init_from_opresult (this=0x7f1cd8da6a88, bin=0x7f1cd8da6da0, opres=0x616000020a9c "\003", res_len=128) at /data/src/10.4/sql/spatial.cc:3330
      #11 0x00005588c8e7e643 in Geometry::create_from_opresult (g_buf=0x7f1cd8da6a88, res=0x7f1cd8da6da0, rr=...) at /data/src/10.4/sql/spatial.cc:673
      #12 0x00005588c8be5f15 in Item_func_spatial_operation::val_str (this=0x62b000063478, str_value=0x7f1cd8da6da0) at /data/src/10.4/sql/item_geofunc.cc:1592
      #13 0x00005588c87fe172 in Type_handler::Item_send_str (this=0x5588cb444840 <type_handler_geometry>, item=0x62b000063478, protocol=0x62b00005b808, buf=0x7f1cd8da6d70) at /data/src/10.4/sql/sql_type.cc:7073
      #14 0x00005588c88179f8 in Type_handler_string_result::Item_send (this=0x5588cb444840 <type_handler_geometry>, item=0x62b000063478, protocol=0x62b00005b808, buf=0x7f1cd8da6d70) at /data/src/10.4/sql/sql_type.h:4973
      #15 0x00005588c7fd584c in Item::send (this=0x62b000063478, protocol=0x62b00005b808, buffer=0x7f1cd8da6d70) at /data/src/10.4/sql/item.h:1044
      #16 0x00005588c7fc78e9 in Protocol::send_result_set_row (this=0x62b00005b808, row_items=0x62b000062678) at /data/src/10.4/sql/protocol.cc:1038
      #17 0x00005588c81723bb in select_send::send_data (this=0x62b000064158, items=...) at /data/src/10.4/sql/sql_class.cc:3139
      #18 0x00005588c835abf0 in JOIN::exec_inner (this=0x62b000064188) at /data/src/10.4/sql/sql_select.cc:4473
      #19 0x00005588c83597c4 in JOIN::exec (this=0x62b000064188) at /data/src/10.4/sql/sql_select.cc:4387
      #20 0x00005588c835d856 in mysql_select (thd=0x62b00005b208, tables=0x0, wild_num=0, fields=..., conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2147748608, result=0x62b000064158, unit=0x62b00005f140, select_lex=0x62b000062518) at /data/src/10.4/sql/sql_select.cc:4826
      #21 0x00005588c832e461 in handle_select (thd=0x62b00005b208, lex=0x62b00005f080, result=0x62b000064158, setup_tables_done_option=0) at /data/src/10.4/sql/sql_select.cc:442
      #22 0x00005588c829e28b in execute_sqlcom_select (thd=0x62b00005b208, all_tables=0x0) at /data/src/10.4/sql/sql_parse.cc:6473
      #23 0x00005588c828b7a0 in mysql_execute_command (thd=0x62b00005b208) at /data/src/10.4/sql/sql_parse.cc:3976
      #24 0x00005588c82a7463 in mysql_parse (thd=0x62b00005b208, rawbuf=0x62b000062228 "SELECT ST_INTERSECTION(\nST_MULTIPOLYGONFROMTEXT(' MULTIPOLYGON(((3.8571428571428568 2.857142857142857,5.571428571428571 4.571428571428571,9 4,3.8571428571428568 2.857142857142857)),((4.5 4.75,3 5,4.6 "..., length=320, parser_state=0x7f1cd8da9860, is_com_multi=false, is_next_command=false) at /data/src/10.4/sql/sql_parse.cc:8008
      #25 0x00005588c827d7a6 in dispatch_command (command=COM_QUERY, thd=0x62b00005b208, packet=0x6290000cd209 "", packet_length=320, is_com_multi=false, is_next_command=false) at /data/src/10.4/sql/sql_parse.cc:1857
      #26 0x00005588c827a315 in do_command (thd=0x62b00005b208) at /data/src/10.4/sql/sql_parse.cc:1378
      #27 0x00005588c86790ba in do_handle_one_connection (connect=0x6080000009a8) at /data/src/10.4/sql/sql_connect.cc:1420
      #28 0x00005588c86789d1 in handle_one_connection (arg=0x6080000009a8) at /data/src/10.4/sql/sql_connect.cc:1324
      #29 0x00005588c92e5aee in pfs_spawn_thread (arg=0x615000003508) at /data/src/10.4/storage/perfschema/pfs.cc:1869
      #30 0x00007f1ce0aa7fd4 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
      #31 0x00007f1ce0b285bc in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81
      

      Attachments

        Issue Links

          Activity

            People

              holyfoot Alexey Botchkov
              elenst Elena Stepanova
              Alexey Botchkov Alexey Botchkov
              Alexander Barkov Alexander Barkov
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 1d
                  1d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 7h 20m Time Not Required
                  7h 20m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.