MDEV-31499 Assertion `(0)' failed in Gis_geometry_collection::init_from_opresult.

Calculate prev_range when the polygon's border is met.
Otherwise we can falsely mark polygon as a 'hole' which breaks the
topology of the result.